--- a/package.json
+++ b/package.json
@@ -12,10 +12,23 @@
     "vue": "^3.5.18"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.3.2",
+    "@eslint/js": "^9.35.0",
+    "@stylistic/eslint-plugin": "^5.3.1",
+    "@types/node": "^24.3.1",
+    "@unocss/eslint-config": "^66.5.1",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.35.0",
+    "eslint-plugin-unicorn": "^61.0.2",
+    "eslint-plugin-vue": "^10.4.0",
+    "globals": "^16.4.0",
     "typescript": "~5.8.3",
+    "unocss": "^66.5.1",
     "vite": "^7.1.2",
+    "vite-plugin-eslint2": "^5.0.4",
+    "vitest": "^3.2.4",
     "vue-tsc": "^3.0.5"
   }
 }
