--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@kitbag/router": "^0.20.6",
+    "@tanstack/vue-query": "^5.87.4",
+    "pinia": "^3.0.3",
     "vue": "^3.5.18"
   },
   "devDependencies": {
