--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@eslint/compat": "^1.3.2",
     "@eslint/js": "^9.35.0",
+    "@iconify-json/lucide": "^1.2.67",
     "@stylistic/eslint-plugin": "^5.3.1",
     "@types/node": "^24.3.1",
     "@unocss/eslint-config": "^66.5.1",
