--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@eslint/compat": "^1.3.2",
     "@eslint/js": "^9.35.0",
     "@iconify-json/lucide": "^1.2.67",
+    "@iconify-json/mdi": "^1.2.3",
     "@stylistic/eslint-plugin": "^5.3.1",
     "@types/node": "^24.3.1",
     "@unocss/eslint-config": "^66.5.1",
