--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@kitbag/router": "^0.20.6",
     "@tanstack/vue-query": "^5.87.4",
+    "@vueuse/core": "^13.9.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.18"
   },
