--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/vue-query": "^5.87.4",
     "@vueuse/core": "^13.9.0",
     "pinia": "^3.0.3",
+    "ua-parser-js": "^2.0.5",
     "vue": "^3.5.18"
   },
   "devDependencies": {
