--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@eslint/compat": "^1.3.2",
     "@eslint/js": "^9.35.0",
+    "@iconify-json/fluent": "^1.2.30",
     "@iconify-json/lucide": "^1.2.67",
     "@iconify-json/mdi": "^1.2.3",
     "@iconify-json/stash": "^1.2.4",
