--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@vueuse/core": "^13.9.0",
     "pinia": "^3.0.3",
     "ua-parser-js": "^2.0.5",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "web-term-ui": "^0.0.14"
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.2",
