--- a/Caddyfile.example
+++ b/Caddyfile.example
@@ -6,5 +6,21 @@ new.freesmlauncher.org {
         hide .git
     }
 
-    header Cache-Control max-age=3600
+    @cors_preflight method OPTIONS
+
+    header {
+        Cache-Control max-age=3600
+        Access-Control-Allow-Origin "{header.origin}"
+        Vary Origin
+        Access-Control-Expose-Headers "Authorization"
+        Access-Control-Allow-Credentials "true"
+    }
+
+    handle @cors_preflight {
+        header {
+            Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE"
+            Access-Control-Max-Age "3600"
+        }
+        respond "" 204
+    }
 }
