--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@iconify-json/fluent": "^1.2.30",
     "@iconify-json/lucide": "^1.2.67",
     "@iconify-json/mdi": "^1.2.3",
+    "@iconify-json/simple-icons": "^1.2.52",
     "@iconify-json/stash": "^1.2.4",
     "@stylistic/eslint-plugin": "^5.3.1",
     "@types/node": "^24.3.1",
