--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@kitbag/router": "^0.20.6",
     "@tanstack/vue-query": "^5.87.4",
     "@vueuse/core": "^13.9.0",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "pinia": "^3.0.3",
     "ua-parser-js": "^2.0.5",
     "vue": "^3.5.18",
@@ -28,6 +30,7 @@
     "@iconify-json/simple-icons": "^1.2.52",
     "@iconify-json/stash": "^1.2.4",
     "@stylistic/eslint-plugin": "^5.3.1",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^24.3.1",
     "@unocss/eslint-config": "^66.5.1",
     "@vitejs/plugin-vue": "^6.0.1",
